# vaderSentiment

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  pyproject.toml  setup.cfg  setup.py  test_vader.py  test_vader_ui.py  test_vader_ui_components.py  vader_ui.py
additional_resources/: build_emoji_lexicon.py
additional_resources/hutto_ICWSM_2014/: _README_.txt  amazonReviewSnippets_GroundTruth.txt  amazonReviewSnippets_anonDataRatings.txt  movieReviewSnippets_GroundTruth.txt  movieReviewSnippets_anonDataRatings.txt  nytEditorialSnippets_GroundTruth.txt  nytEditorialSnippets_anonDataRatings.txt  tweets_GroundTruth.txt  tweets_anonDataRatings.txt  vaderSentiment.py  vader_sentiment_comparison_online_weblink.url
vaderSentiment/: emoji_unic_lexicon.txt  emoji_utf8_lexicon.txt  vaderSentiment.py  vader_lexicon.txt
vaderSentiment/lang/ca/: language.py  lexicon.txt
vaderSentiment/lang/en/: language.py  lexicon.txt
vaderSentiment/lang/es/: language.py  lexicon.txt
